[Yukta]: fixed errors